--- a/package.json
+++ b/package.json
@@ -3,11 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@unform/core": "^2.1.6",
+    "@unform/web": "^2.1.6",
     "axios": "^0.19.2",
     "dayjs": "^1.8.27",
+    "polished": "^4.1.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-icons": "^4.3.1",
+    "react-jwt": "^1.1.4",
+    "react-loading": "^2.0.3",
+    "react-router-dom": "^5.3.0",
+    "react-scripts": "3.4.1",
+    "styled-components": "^5.3.5",
+    "uuidv4": "^6.2.13",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -43,13 +53,15 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.5",
+    "@types/styled-components": "^5.1.24",
     "@types/yup": "^0.29.0",
     "@typescript-eslint/eslint-plugin": "^2.34.0",
     "@typescript-eslint/parser": "^2.34.0",
     "eslint-plugin-react": "^7.20.0",
     "husky": "^4.2.5",
     "miragejs": "^0.1.38",
-    "prettier": "^2.0.5"
+    "prettier": "^2.0.5",
+    "typescript": "^4.6.3"
   },
   "husky": {
     "hooks": {
